Fix tooltip z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -738,6 +738,7 @@ button:hover,
   justify-content: flex-end;
   width: 100cqi;
   position: relative;
+  z-index: 200;
 }
 
 .item-card-row {
